--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-# 為演示Spring Boot 的命令行功能，我們需要添加一個Web依賴, 並且設置為none
 spring.main.web-application-type=none
+# spring.main.web-application-type=servlet
 
